# secret-scan-360

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ss360-baseline.json  .ss360ignore  =0.28.0  =1.0.1  BETA.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  README_AGENT.md  RELEASE_NOTES_v0.3.0.md  demo_e2e.sh  docker-compose.yml  expired_jwt.txt  findings.json  findings.sarif  local_test_findings.json  org_repos.txt  policy.demo.yml  policy.example.yml  policy.strict.yml  policy.test.yml  pyproject.toml  run_tests.py  setup.cfg  slack_webhook.txt  sql_init.sql  test-findings.sarif  test_demo.sh  test_sarif_aggregator.py  test_secrets.py  tokens.txt
.artifacts/: org-summary.json  org-summary.md
.github/: PULL_REQUEST_TEMPLATE.md
detectors/: __init__.py  autofix_framework.py  aws_keypair.py  azure_account_key.py  azure_storage_sas.py  ci_use_ss360_cli.py  cli_baseline.py  compat_harness.py  custom_detector.py  docs_quickstart.py  entropy_generic.py  feature_pr_action.py  findings_schema.py  gcp_service_account_key.py  github_pat.py  gitlab_pat.py  google_api_key.py  history_scan.py  honeytokens_core.py  ignore_expiry_warn.py  impl_feature_pr_and_fix_ci_pr_only.py  jwt_generic.py  nightly_canary.py  perf_parallel_scan.py  pm_route_ci_failed.py  policy_core.py  precommit_hook.py  release_v0_2_0.py  sarif_export.py  sarif_rules_meta.py  sendgrid_api_key.py  slack_token.py  slack_webhook.py  stripe_restricted_key.py  stripe_secret.py  twilio_keys.py  validator_core.py
docs/: AGENT_WORKFLOW.md
local_tests/: samples.env
ops/: agent_fallback.sh  bootstrap.sh  migrate.sh
scripts/: ci_scan.py  format_findings.py  notify_hub.py  require_tests_changed.py
tests/: _probe_black_fail.py  test_acceptance_criteria.py  test_autofix.py  test_comprehensive.py  test_detectors_autofix_framework.py  test_detectors_aws_keypair.py  test_detectors_azure_account_key.py  test_detectors_azure_storage_sas.py  test_detectors_ci_use_ss360_cli.py  test_detectors_cli_baseline.py  test_detectors_compat_harness.py  test_detectors_custom_detector.py  test_detectors_docs_quickstart.py  test_detectors_entropy_generic.py  test_detectors_feature_pr_action.py  test_detectors_findings_schema.py  test_detectors_gcp_service_account_key.py  test_detectors_github_pat.py  test_detectors_gitlab_pat.py  test_detectors_google_api_key.py  test_detectors_history_scan.py  test_detectors_honeytokens_core.py  test_detectors_ignore_expiry_warn.py  test_detectors_impl_feature_pr_and_fix_ci_pr_only.py  test_detectors_jwt_generic.py  test_detectors_nightly_canary.py  test_detectors_perf_parallel_scan.py  test_detectors_pm_route_ci_failed.py  test_detectors_policy_core.py  test_detectors_precommit_hook.py  test_detectors_release_v0_2_0.py  (+17 more)
(+119 files in other folders)
